--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -2,10 +2,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
-#acerca {
-    padding-top: 20px;
-    padding-bottom: 15px;
+#primerP {
+    color: #6610f2;
 }
+
 .text {
     word-wrap: break-word;
     word-break: break-word;
@@ -14,32 +14,47 @@ body {
 
 h2 {
     padding: 100px;
+    color: #6610f2;
 }
 
-#preferencias {
-    padding-top: 50px;
-    margin-bottom: 75px;
-}
 .progress-bar {
     background-color: #6610f2 !important;
 }
-.habilidad-img {
+.habilidad {
     padding-left: 150px;
     max-width: 300px;
     max-height: 300px;
-    width: auto;
-    height: auto;
 }
   
 .fade-in {
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 3s ease-in-out;
 }
 .fade-in.visible {
     opacity: 1;
 }
 
+#acerca {
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+
+#preferencias {
+    padding-top: 50px;
+    padding-bottom: 75px;
+}
+
 #contactame {
-    margin-top: 225px;
+    padding-top: 225px;
     padding-bottom: 50px;
+}
+
+video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
