--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -26,11 +26,11 @@ h2 {
     max-height: 300px;
 }
   
-.fade-in {
+.barrido {
     opacity: 0;
-    transition: opacity 3s ease-in-out;
+    transition: opacity 2s ease-in-out;
 }
-.fade-in.visible {
+.barrido.visible {
     opacity: 1;
 }
 
