--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -12,9 +12,26 @@ body {
     max-width: 100%;
 }
 
+@keyframes show {
+    from {
+        opacity: 0;
+        scale: 25%;
+}
+to {
+    opacity: 1;
+    scale: 100%;
+}
+}
+
 h2 {
     padding: 100px;
     color: #6610f2;
+    view-timeline-name: --image;
+    view-timeline-axis: lock;
+    animation-timeline: --image;
+    animation-name: show;
+    animation-range: entry 0% cover 30%;
+    animation-fill-mode: both;
 }
 
 .progress-bar {
